修改主数据管理里面的显示数据BUG