@@ -58,345 +58,353 @@ import cn.rongcapital.mkt.vo.out.DataGetMainListOut;
 @Service
 public class DataGetFilterAudiencesServiceImpl implements DataGetFilterAudiencesService {
 
-    private Logger logger = LoggerFactory.getLogger(getClass());
+	private Logger logger = LoggerFactory.getLogger(getClass());
 
-    @Autowired
-    private ImportTemplateDao importTemplateDao;
+	@Autowired
+	private ImportTemplateDao importTemplateDao;
 
-    @Autowired
-    private DataPartyDao dataPartyDao;
+	@Autowired
+	private DataPartyDao dataPartyDao;
 
-    @Autowired
-    private DataPopulationDao dataPopulationDao;
+	@Autowired
+	private DataPopulationDao dataPopulationDao;
 
-    @Autowired
-    private DataCustomerTagsDao dataCustomerTagsDao;
+	@Autowired
+	private DataCustomerTagsDao dataCustomerTagsDao;
 
-    @Autowired
-    private DataArchPointDao dataArchPointDao;
+	@Autowired
+	private DataArchPointDao dataArchPointDao;
 
-    @Autowired
-    private DataMemberDao dataMemberDao;
+	@Autowired
+	private DataMemberDao dataMemberDao;
 
-    @Autowired
-    private DataLoginDao dataLoginDao;
+	@Autowired
+	private DataLoginDao dataLoginDao;
 
-    @Autowired
-    private DataPaymentDao dataPaymentDao;
+	@Autowired
+	private DataPaymentDao dataPaymentDao;
 
-    @Autowired
-    private DataShoppingDao dataShoppingDao;
+	@Autowired
+	private DataShoppingDao dataShoppingDao;
 
-    @Autowired
-    private DataOptionMapDao dataOptionMapDao;
+	@Autowired
+	private DataOptionMapDao dataOptionMapDao;
 
-    @Autowired
-    private ContactWayMapDao contactWayMapDao;
+	@Autowired
+	private ContactWayMapDao contactWayMapDao;
 
-    @Override
-    @Transactional(propagation = Propagation.REQUIRED, readOnly = false)
-    public <T extends BaseQuery> Object getFilterAudiences(String method, String userToken, String ver, Integer index,
-                    Integer size, Integer dataType, List<Integer> dataTypeList, List<Integer> contactIds,
-                    List<CustomizeViewCheckboxIn> customizeViews, Integer timeCondition) {
-        DataGetMainListOut result = new DataGetMainListOut(ApiErrorCode.SUCCESS.getCode(),
-                        ApiErrorCode.SUCCESS.getMsg(), ApiConstant.INT_ZERO, null);
-        List<Map<String, Object>> columnList = new ArrayList<>();
-        List<ImportTemplate> importTemplateList = null;
-        Integer totalCount = 0;
+	@Override
+	@Transactional(propagation = Propagation.REQUIRED, readOnly = false)
+	public <T extends BaseQuery> Object getFilterAudiences(String method, String userToken, String ver, Integer index,
+			Integer size, Integer dataType, List<Integer> dataTypeList, List<Integer> contactIds,
+			List<CustomizeViewCheckboxIn> customizeViews, Integer timeCondition) {
+		DataGetMainListOut result = new DataGetMainListOut(ApiErrorCode.SUCCESS.getCode(),
+				ApiErrorCode.SUCCESS.getMsg(), ApiConstant.INT_ZERO, null);
+		List<Map<String, Object>> columnList = new ArrayList<>();
+		List<ImportTemplate> importTemplateList = null;
+		Integer totalCount = 0;
 
-        updateConditions(dataTypeList, contactIds, timeCondition);
+		updateConditions(dataTypeList, contactIds, timeCondition);
 
-        if (customizeViews != null && !customizeViews.isEmpty()) {
-            for (int i = 0; i < customizeViews.size(); i++) {
-                ImportTemplate paramImportTemplate = new ImportTemplate(index, size);
-                paramImportTemplate.setSelected(customizeViews.get(i).getIsSelected());
-                paramImportTemplate.setFieldName(customizeViews.get(i).getColName());
-                paramImportTemplate.setTemplType(dataType);
-                importTemplateDao.updateSelectedByTemplType(paramImportTemplate);
-            }
-        }
+		if (customizeViews != null && !customizeViews.isEmpty()) {
+			for (int i = 0; i < customizeViews.size(); i++) {
+				ImportTemplate paramImportTemplate = new ImportTemplate(index, size);
+				paramImportTemplate.setSelected(customizeViews.get(i).getIsSelected());
+				paramImportTemplate.setFieldName(customizeViews.get(i).getColName());
+				paramImportTemplate.setTemplType(dataType);
+				importTemplateDao.updateSelectedByTemplType(paramImportTemplate);
+			}
+		}
 
-        ImportTemplate paramImportTemplate = new ImportTemplate(index, size);
-        paramImportTemplate.setSelected(Boolean.TRUE);
-        paramImportTemplate.setTemplType(dataType);
-        importTemplateList = importTemplateDao.selectSelectedTemplateList(paramImportTemplate);
+		ImportTemplate paramImportTemplate = new ImportTemplate(index, size);
+		paramImportTemplate.setSelected(Boolean.TRUE);
+		paramImportTemplate.setTemplType(dataType);
+		importTemplateList = importTemplateDao.selectSelectedTemplateList(paramImportTemplate);
 
-        if (importTemplateList != null && !importTemplateList.isEmpty()) {
-            for (ImportTemplate importTemplate : importTemplateList) {
-                Map<String, Object> map = new HashMap<>();
-                map.put("col_id", importTemplate.getId());
-                map.put("col_name", importTemplate.getFieldName());
-                map.put("col_code", importTemplate.getFieldCode());
-                if (importTemplate.getFieldCode().equalsIgnoreCase("gender")) {
-                    map.put("col_code", "sex");
-                }
-                columnList.add(map);
-                result.setMdType(importTemplate.getTemplType());
-            }
-        }
+		if (importTemplateList != null && !importTemplateList.isEmpty()) {
+			for (ImportTemplate importTemplate : importTemplateList) {
+				Map<String, Object> map = new HashMap<>();
+				map.put("col_id", importTemplate.getId());
+				map.put("col_name", importTemplate.getFieldName());
+				map.put("col_code", importTemplate.getFieldCode());
+				if (importTemplate.getFieldCode().equalsIgnoreCase("gender")) {
+					map.put("col_code", "sex");
+				}
+				columnList.add(map);
+				result.setMdType(importTemplate.getTemplType());
+			}
+		}
 
-        // 这代码写的太2了
-        MainDataVO mainDataVO = null;
-        if (dataType == DataTypeEnum.PARTY.getCode()) {
-            DataParty paramObj = new DataParty(index, size);
-            mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataPartyDao);
-        } else if (dataType == DataTypeEnum.POPULATION.getCode()) {
-            DataPopulation paramObj = new DataPopulation(index, size);
-            mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataPopulationDao);
-        } else if (dataType == DataTypeEnum.CUSTOMER_TAGS.getCode()) {
-            DataCustomerTags paramObj = new DataCustomerTags(index, size);
-            mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataCustomerTagsDao);
-        } else if (dataType == DataTypeEnum.ARCH_POINT.getCode()) {
-            DataArchPoint paramObj = new DataArchPoint(index, size);
-            mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataArchPointDao);
-        } else if (dataType == DataTypeEnum.MEMBER.getCode()) {
-            DataMember paramObj = new DataMember(index, size);
-            mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataMemberDao);
-        } else if (dataType == DataTypeEnum.LOGIN.getCode()) {
-            DataLogin paramObj = new DataLogin(index, size);
-            mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataLoginDao);
-        } else if (dataType == DataTypeEnum.PAYMENT.getCode()) {
-            DataPayment paramObj = new DataPayment(index, size);
-            mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataPaymentDao);
-        } else if (dataType == DataTypeEnum.SHOPPING.getCode()) {
-            DataShopping paramObj = new DataShopping(index, size);
-            mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataShoppingDao);
-        } else {
-            logger.error("传入错误的data type : {}", dataType);
-        }
+		// 这代码写的太2了
+		MainDataVO mainDataVO = null;
+		if (CollectionUtils.isEmpty(dataTypeList)) {
+			for (Integer mdType : dataTypeList) {
+				if (mdType == dataType) {
+					if (dataType == DataTypeEnum.PARTY.getCode()) {
+						DataParty paramObj = new DataParty(index, size);
+						mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataPartyDao);
+					} else if (dataType == DataTypeEnum.POPULATION.getCode()) {
+						DataPopulation paramObj = new DataPopulation(index, size);
+						mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataPopulationDao);
+					} else if (dataType == DataTypeEnum.CUSTOMER_TAGS.getCode()) {
+						DataCustomerTags paramObj = new DataCustomerTags(index, size);
+						mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataCustomerTagsDao);
+					} else if (dataType == DataTypeEnum.ARCH_POINT.getCode()) {
+						DataArchPoint paramObj = new DataArchPoint(index, size);
+						mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataArchPointDao);
+					} else if (dataType == DataTypeEnum.MEMBER.getCode()) {
+						DataMember paramObj = new DataMember(index, size);
+						mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataMemberDao);
+					} else if (dataType == DataTypeEnum.LOGIN.getCode()) {
+						DataLogin paramObj = new DataLogin(index, size);
+						mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataLoginDao);
+					} else if (dataType == DataTypeEnum.PAYMENT.getCode()) {
+						DataPayment paramObj = new DataPayment(index, size);
+						mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataPaymentDao);
+					} else if (dataType == DataTypeEnum.SHOPPING.getCode()) {
+						DataShopping paramObj = new DataShopping(index, size);
+						mainDataVO = getData(dataType, dataTypeList, contactIds, timeCondition, paramObj, dataShoppingDao);
+					} else {
+						logger.error("传入错误的data type : {}", dataType);
+					}
 
-        result.setContactWayList(mainDataVO.getContactWayList());
-        result.setDataTypeList(mainDataVO.getDataTypeList());
-        result.setTimeCondition(mainDataVO.getTimeCondition());
-        result.getData().addAll(mainDataVO.getResultList());
-        result.setTotal(mainDataVO.getTotalCount());
-        result.setTotalCount(mainDataVO.getTotalCount());
-        result.setCountList(mainDataVO.getCountList());
-        result.getColNames().addAll(columnList);
-        return Response.ok().entity(result).build();
-    }
+				}
 
-    @SuppressWarnings({"unchecked", "rawtypes"})
-    private <T extends BaseQuery, D extends BaseDataFilterDao> MainDataVO getData(Integer mdType,
-                    List<Integer> mdTypeList, List<Integer> contactIdList, Integer timeCondition, T paramObj, D dao) {
+			}
+		}
 
-        MainDataVO mainDataVO = new MainDataVO();
-        SimpleDateFormat simpleDateFormat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
-        Map<String, Object> paramMap = new HashMap<>();
-        // 这段mappingKeyIds的逻辑绝对是效率上的作大死
-        List<String> mappingKeyIds = new ArrayList<>();
-        contactIdList = filterContactId(contactIdList, dao);
-        if (CollectionUtils.isEmpty(mdTypeList)) {
-            mdTypeList = null;
-        }
+		result.setContactWayList(mainDataVO.getContactWayList());
+		result.setDataTypeList(mainDataVO.getDataTypeList());
+		result.setTimeCondition(mainDataVO.getTimeCondition());
+		result.getData().addAll(mainDataVO.getResultList());
+		result.setTotal(mainDataVO.getTotalCount());
+		result.setTotalCount(mainDataVO.getTotalCount());
+		result.setCountList(mainDataVO.getCountList());
+		result.getColNames().addAll(columnList);
+		return Response.ok().entity(result).build();
+	}
 
-        paramMap.put("contactIdList", contactIdList);
-        paramMap.put("mdTypes", mdTypeList);
+	@SuppressWarnings({ "unchecked", "rawtypes" })
+	private <T extends BaseQuery, D extends BaseDataFilterDao> MainDataVO getData(Integer mdType,
+			List<Integer> mdTypeList, List<Integer> contactIdList, Integer timeCondition, T paramObj, D dao) {
 
-        if (timeCondition == null) {
-            timeCondition = 0;
-        }
+		MainDataVO mainDataVO = new MainDataVO();
+		SimpleDateFormat simpleDateFormat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+		Map<String, Object> paramMap = new HashMap<>();
+		// 这段mappingKeyIds的逻辑绝对是效率上的作大死
+		List<String> mappingKeyIds = new ArrayList<>();
+		contactIdList = filterContactId(contactIdList, dao);
+		if (CollectionUtils.isEmpty(mdTypeList)) {
+			mdTypeList = null;
+		}
 
-        Date timeConditionDate = TaskConditionEnum.getEnumByCode(timeCondition).getTime();
-        paramMap.put("timeCondition", timeConditionDate);
-        if (!CollectionUtils.isEmpty(mdTypeList)) {
-            for (Integer dataType : mdTypeList) {
-                List<String> tmpList = new ArrayList<String>();
-                if (dataType == DataTypeEnum.POPULATION.getCode()) {
-                    tmpList = dataPopulationDao.selectMappingKeyId(paramMap);
-                    if (!CollectionUtils.isEmpty(tmpList))
-                        mappingKeyIds.addAll(tmpList);
-                } else if (dataType == DataTypeEnum.CUSTOMER_TAGS.getCode()) {
-                    tmpList = dataCustomerTagsDao.selectMappingKeyId(paramMap);
-                    if (!CollectionUtils.isEmpty(tmpList))
-                        mappingKeyIds.addAll(tmpList);
-                } else if (dataType == DataTypeEnum.ARCH_POINT.getCode()) {
-                    tmpList = dataArchPointDao.selectMappingKeyId(paramMap);
-                    if (!CollectionUtils.isEmpty(tmpList))
-                        mappingKeyIds.addAll(tmpList);
-                } else if (dataType == DataTypeEnum.MEMBER.getCode()) {
-                    tmpList = dataMemberDao.selectMappingKeyId(paramMap);
-                    if (!CollectionUtils.isEmpty(tmpList))
-                        mappingKeyIds.addAll(tmpList);
-                } else if (dataType == DataTypeEnum.LOGIN.getCode()) {
-                    tmpList = dataLoginDao.selectMappingKeyId(paramMap);
-                    if (!CollectionUtils.isEmpty(tmpList))
-                        mappingKeyIds.addAll(tmpList);
-                } else if (dataType == DataTypeEnum.PAYMENT.getCode()) {
-                    tmpList = dataPaymentDao.selectMappingKeyId(paramMap);
-                    if (!CollectionUtils.isEmpty(tmpList))
-                        mappingKeyIds.addAll(tmpList);
-                } else if (dataType == DataTypeEnum.SHOPPING.getCode()) {
-                    tmpList = dataShoppingDao.selectMappingKeyId(paramMap);
-                    if (!CollectionUtils.isEmpty(tmpList))
-                        mappingKeyIds.addAll(tmpList);
-                } else {
-                    logger.error("传入错误的data type : {}", dataType);
-                }
-            }
-        }
+		paramMap.put("contactIdList", contactIdList);
+		paramMap.put("mdTypes", mdTypeList);
 
-        if (!CollectionUtils.isEmpty(mdTypeList) && CollectionUtils.isEmpty(mappingKeyIds)) {
-            mappingKeyIds.add("-1");
-        }
+		if (timeCondition == null) {
+			timeCondition = 0;
+		}
 
-        paramMap.put("startIndex", paramObj.getStartIndex());
-        paramMap.put("pageSize", paramObj.getPageSize());
-        paramMap.put("mappingKeyIds", mappingKeyIds);
+		Date timeConditionDate = TaskConditionEnum.getEnumByCode(timeCondition).getTime();
+		paramMap.put("timeCondition", timeConditionDate);
+		if (!CollectionUtils.isEmpty(mdTypeList)) {
+			for (Integer dataType : mdTypeList) {
+				List<String> tmpList = new ArrayList<String>();
+				if (dataType == DataTypeEnum.POPULATION.getCode()) {
+					tmpList = dataPopulationDao.selectMappingKeyId(paramMap);
+					if (!CollectionUtils.isEmpty(tmpList))
+						mappingKeyIds.addAll(tmpList);
+				} else if (dataType == DataTypeEnum.CUSTOMER_TAGS.getCode()) {
+					tmpList = dataCustomerTagsDao.selectMappingKeyId(paramMap);
+					if (!CollectionUtils.isEmpty(tmpList))
+						mappingKeyIds.addAll(tmpList);
+				} else if (dataType == DataTypeEnum.ARCH_POINT.getCode()) {
+					tmpList = dataArchPointDao.selectMappingKeyId(paramMap);
+					if (!CollectionUtils.isEmpty(tmpList))
+						mappingKeyIds.addAll(tmpList);
+				} else if (dataType == DataTypeEnum.MEMBER.getCode()) {
+					tmpList = dataMemberDao.selectMappingKeyId(paramMap);
+					if (!CollectionUtils.isEmpty(tmpList))
+						mappingKeyIds.addAll(tmpList);
+				} else if (dataType == DataTypeEnum.LOGIN.getCode()) {
+					tmpList = dataLoginDao.selectMappingKeyId(paramMap);
+					if (!CollectionUtils.isEmpty(tmpList))
+						mappingKeyIds.addAll(tmpList);
+				} else if (dataType == DataTypeEnum.PAYMENT.getCode()) {
+					tmpList = dataPaymentDao.selectMappingKeyId(paramMap);
+					if (!CollectionUtils.isEmpty(tmpList))
+						mappingKeyIds.addAll(tmpList);
+				} else if (dataType == DataTypeEnum.SHOPPING.getCode()) {
+					tmpList = dataShoppingDao.selectMappingKeyId(paramMap);
+					if (!CollectionUtils.isEmpty(tmpList))
+						mappingKeyIds.addAll(tmpList);
+				} else {
+					logger.error("传入错误的data type : {}", dataType);
+				}
+			}
+		}
 
-        List<T> dataList = dao.selectByBatchId(paramMap);
-        Integer totalCount = dao.selectCountByBatchId(paramMap);
+		if (!CollectionUtils.isEmpty(mdTypeList) && CollectionUtils.isEmpty(mappingKeyIds)) {
+			mappingKeyIds.add("-1");
+		}
 
-        List<Map<String, Object>> resultList = new ArrayList<>();
-        if (dataList != null && !dataList.isEmpty()) {
-            ImportTemplate paramImportTemplate = new ImportTemplate();
-            paramImportTemplate.setSelected(Boolean.TRUE);
-            paramImportTemplate.setTemplType(mdType);
+		paramMap.put("startIndex", paramObj.getStartIndex());
+		paramMap.put("pageSize", paramObj.getPageSize());
+		paramMap.put("mappingKeyIds", mappingKeyIds);
 
-            List<ImportTemplate> importTemplateList = importTemplateDao.selectSelectedTemplateList(paramImportTemplate);
+		List<T> dataList = dao.selectByBatchId(paramMap);
+		Integer totalCount = dao.selectCountByBatchId(paramMap);
 
-            for (T tempT : dataList) {
-                Map<String, Object> map = new HashMap<>();
-                map.put("id", ReflectionUtil.getObjectPropertyByName(tempT, "id"));
-                for (ImportTemplate importTemplate : importTemplateList) {
-                    Object value = ReflectionUtil.getObjectPropertyByName(tempT,
-                                    ReflectionUtil.recoverFieldName(importTemplate.getFieldCode()));
-                    if (value != null && value.getClass().getSimpleName().equals(Date.class.getSimpleName())) {
-                        simpleDateFormat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
-                        value = simpleDateFormat.format((Date) value);
-                    }
-                    map.put(importTemplate.getFieldCode(), value);
-                }
+		List<Map<String, Object>> resultList = new ArrayList<>();
+		if (dataList != null && !dataList.isEmpty()) {
+			ImportTemplate paramImportTemplate = new ImportTemplate();
+			paramImportTemplate.setSelected(Boolean.TRUE);
+			paramImportTemplate.setTemplType(mdType);
 
-                if (mdType == 0 || mdType == 1) {
-                    Object sexByte = ReflectionUtil.getObjectPropertyByName(tempT, "gender");
-                    if (sexByte != null) {
-                        String sex = GenderUtils.byteToChar(Byte.valueOf(sexByte + ""));
-                        map.put("sex", sex);
-                    }
-                }
+			List<ImportTemplate> importTemplateList = importTemplateDao.selectSelectedTemplateList(paramImportTemplate);
 
-                resultList.add(map);
-            }
-        }
+			for (T tempT : dataList) {
+				Map<String, Object> map = new HashMap<>();
+				map.put("id", ReflectionUtil.getObjectPropertyByName(tempT, "id"));
+				for (ImportTemplate importTemplate : importTemplateList) {
+					Object value = ReflectionUtil.getObjectPropertyByName(tempT,
+							ReflectionUtil.recoverFieldName(importTemplate.getFieldCode()));
+					if (value != null && value.getClass().getSimpleName().equals(Date.class.getSimpleName())) {
+						simpleDateFormat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+						value = simpleDateFormat.format((Date) value);
+					}
+					map.put(importTemplate.getFieldCode(), value);
+				}
 
-        Map<String, Object> countRowsMap = dataPartyDao.selectMainCount(paramMap);
-        List<Map<String, Object>> countList = new ArrayList<>();
-        List<ImportTemplate> importTemplateList = importTemplateDao.selectTemplTypePairs();
-        for (ImportTemplate importTemplate : importTemplateList) {
-            Map<String, Object> countMap = new LinkedHashMap<>();
-            String tagName = importTemplate.getTemplName();
-            countMap.put("md_type", importTemplate.getTemplType());
-            countMap.put("tag_name", tagName);
-            Object count = countRowsMap.get(ImportTemplTypeEnum.getCountNameByName(tagName));
-            // 主数据不在此列中
-            if (!CollectionUtils.isEmpty(mdTypeList)
-                            && !importTemplate.getTemplType().equals(DataTypeEnum.PARTY.getCode())
-                            && !isDataTypeListContainType(mdTypeList, importTemplate.getTemplType())) {
-                count = "0";
-            }
-            countMap.put("count_rows", count);
-            countList.add(countMap);
-        }
+				if (mdType == 0 || mdType == 1) {
+					Object sexByte = ReflectionUtil.getObjectPropertyByName(tempT, "gender");
+					if (sexByte != null) {
+						String sex = GenderUtils.byteToChar(Byte.valueOf(sexByte + ""));
+						map.put("sex", sex);
+					}
+				}
 
-        List<Integer> dataOptionMapList = new ArrayList<>();
-        List<Integer> contactWayMapList = new ArrayList<>();
-        String resultTimeCondition = null;
+				resultList.add(map);
+			}
+		}
 
-        List<DataOptionMap> dataOptionMaps = dataOptionMapDao.selectList(null);
-        if (!CollectionUtils.isEmpty(dataOptionMaps)) {
-            for (DataOptionMap dataOptionMap : dataOptionMaps) {
-                if (dataOptionMap.getOptionStatus().compareTo(new Byte("1")) == 0) {
-                    dataOptionMapList.add(dataOptionMap.getTableId());
-                }
-            }
-        }
+		Map<String, Object> countRowsMap = dataPartyDao.selectMainCount(paramMap);
+		List<Map<String, Object>> countList = new ArrayList<>();
+		List<ImportTemplate> importTemplateList = importTemplateDao.selectTemplTypePairs();
+		for (ImportTemplate importTemplate : importTemplateList) {
+			Map<String, Object> countMap = new LinkedHashMap<>();
+			String tagName = importTemplate.getTemplName();
+			countMap.put("md_type", importTemplate.getTemplType());
+			countMap.put("tag_name", tagName);
+			Object count = countRowsMap.get(ImportTemplTypeEnum.getCountNameByName(tagName));
+			// 主数据不在此列中
+			if (!CollectionUtils.isEmpty(mdTypeList)
+					&& !importTemplate.getTemplType().equals(DataTypeEnum.PARTY.getCode())
+					&& !isDataTypeListContainType(mdTypeList, importTemplate.getTemplType())) {
+				count = "0";
+			}
+			countMap.put("count_rows", count);
+			countList.add(countMap);
+		}
 
-        List<ContactWayMap> contactWayMaps = contactWayMapDao.selectList(null);
-        if (!CollectionUtils.isEmpty(contactWayMaps)) {
-            for (ContactWayMap contactWayMap : contactWayMaps) {
-                if (contactWayMap.getStatus().compareTo(new Byte("1")) == 0) {
-                    contactWayMapList.add(contactWayMap.getContactWayId());
-                }
-            }
-            resultTimeCondition = contactWayMaps.get(0).getTimeConditionAbbreviation();
-        }
+		List<Integer> dataOptionMapList = new ArrayList<>();
+		List<Integer> contactWayMapList = new ArrayList<>();
+		String resultTimeCondition = null;
 
-        mainDataVO.setTimeCondition(
-                        Byte.valueOf(TaskConditionEnum.getEnumByAbbreviation(resultTimeCondition).getCode() + ""));
-        mainDataVO.setContactWayList(contactWayMapList);
-        mainDataVO.setDataTypeList(dataOptionMapList);
-        mainDataVO.setResultList(resultList);
-        mainDataVO.setCountList(countList);
-        mainDataVO.setTotalCount(totalCount);
-        return mainDataVO;
-    }
+		List<DataOptionMap> dataOptionMaps = dataOptionMapDao.selectList(null);
+		if (!CollectionUtils.isEmpty(dataOptionMaps)) {
+			for (DataOptionMap dataOptionMap : dataOptionMaps) {
+				if (dataOptionMap.getOptionStatus().compareTo(new Byte("1")) == 0) {
+					dataOptionMapList.add(dataOptionMap.getTableId());
+				}
+			}
+		}
 
-    private <D extends BaseDataFilterDao<?>> List<Integer> filterContactId(List<Integer> contactIdList, D dao) {
-        List<Integer> resultList = new ArrayList<>();
+		List<ContactWayMap> contactWayMaps = contactWayMapDao.selectList(null);
+		if (!CollectionUtils.isEmpty(contactWayMaps)) {
+			for (ContactWayMap contactWayMap : contactWayMaps) {
+				if (contactWayMap.getStatus().compareTo(new Byte("1")) == 0) {
+					contactWayMapList.add(contactWayMap.getContactWayId());
+				}
+			}
+			resultTimeCondition = contactWayMaps.get(0).getTimeConditionAbbreviation();
+		}
 
-        if (CollectionUtils.isEmpty(contactIdList)) {
-            return resultList;
-        }
+		mainDataVO.setTimeCondition(
+				Byte.valueOf(TaskConditionEnum.getEnumByAbbreviation(resultTimeCondition).getCode() + ""));
+		mainDataVO.setContactWayList(contactWayMapList);
+		mainDataVO.setDataTypeList(dataOptionMapList);
+		mainDataVO.setResultList(resultList);
+		mainDataVO.setCountList(countList);
+		mainDataVO.setTotalCount(totalCount);
+		return mainDataVO;
+	}
 
-        for (Integer contactId : contactIdList) {
-            String columnName = ContactwayEnum.getColumnNameById(contactId);
-            if (columnName == null) {
-                continue;
-            } else {
-                List<String> columnNameList = dao.selectColumns();
-                for (String str : columnNameList) {
-                    if (columnName.equalsIgnoreCase(str)) {
-                        resultList.add(contactId);
-                        break;
-                    }
-                }
-            }
-        }
+	private <D extends BaseDataFilterDao<?>> List<Integer> filterContactId(List<Integer> contactIdList, D dao) {
+		List<Integer> resultList = new ArrayList<>();
 
-        return resultList;
-    }
+		if (CollectionUtils.isEmpty(contactIdList)) {
+			return resultList;
+		}
 
-    private void updateConditions(List<Integer> dataTypeList, List<Integer> contactIds, Integer timeCondition) {
+		for (Integer contactId : contactIdList) {
+			String columnName = ContactwayEnum.getColumnNameById(contactId);
+			if (columnName == null) {
+				continue;
+			} else {
+				List<String> columnNameList = dao.selectColumns();
+				for (String str : columnNameList) {
+					if (columnName.equalsIgnoreCase(str)) {
+						resultList.add(contactId);
+						break;
+					}
+				}
+			}
+		}
 
-        if (CollectionUtils.isEmpty(dataTypeList)) {
-            for (int i = 1; i < 8; i++) {
-                dataTypeList.add(i);
-            }
-        }
+		return resultList;
+	}
 
-        // 将数据类型的下拉列表里的状态保存起来
-        if (!CollectionUtils.isEmpty(dataTypeList)) {
-            dataOptionMapDao.updateSelectedStatusByIds(dataTypeList);
-            dataOptionMapDao.updateUnSelectedStatusByIds(dataTypeList);
-        }
+	private void updateConditions(List<Integer> dataTypeList, List<Integer> contactIds, Integer timeCondition) {
 
-        if (!CollectionUtils.isEmpty(contactIds)) {
-            contactWayMapDao.updateSelectedStatusByIds(contactIds);
-            contactWayMapDao.updateUnSelectedStatusByIds(contactIds);
-        }
+		if (CollectionUtils.isEmpty(dataTypeList)) {
+			for (int i = 1; i < 8; i++) {
+				dataTypeList.add(i);
+			}
+		}
 
-        if (timeCondition != null) {
-            Map<String, Object> paramMap = new HashMap<>();
-            paramMap.put("timeCondition", TaskConditionEnum.getEnumByCode(timeCondition).getTime());
-            paramMap.put("timeConditionAbbreviation", TaskConditionEnum.getEnumByCode(timeCondition).getAbbreviation());
-            contactWayMapDao.updateTimeCondition(paramMap);
-        }
+		// 将数据类型的下拉列表里的状态保存起来
+		if (!CollectionUtils.isEmpty(dataTypeList)) {
+			dataOptionMapDao.updateSelectedStatusByIds(dataTypeList);
+			dataOptionMapDao.updateUnSelectedStatusByIds(dataTypeList);
+		}
 
-    }
+		if (!CollectionUtils.isEmpty(contactIds)) {
+			contactWayMapDao.updateSelectedStatusByIds(contactIds);
+			contactWayMapDao.updateUnSelectedStatusByIds(contactIds);
+		}
 
-    private boolean isDataTypeListContainType(List<Integer> mdTypeList, Integer mdType) {
-        if (CollectionUtils.isEmpty(mdTypeList)) {
-            return false;
-        } else {
-            for (Integer code : mdTypeList) {
-                if (mdType.equals(code)) {
-                    return true;
-                }
-            }
-        }
+		if (timeCondition != null) {
+			Map<String, Object> paramMap = new HashMap<>();
+			paramMap.put("timeCondition", TaskConditionEnum.getEnumByCode(timeCondition).getTime());
+			paramMap.put("timeConditionAbbreviation", TaskConditionEnum.getEnumByCode(timeCondition).getAbbreviation());
+			contactWayMapDao.updateTimeCondition(paramMap);
+		}
 
-        return false;
-    }
+	}
+
+	private boolean isDataTypeListContainType(List<Integer> mdTypeList, Integer mdType) {
+		if (CollectionUtils.isEmpty(mdTypeList)) {
+			return false;
+		} else {
+			for (Integer code : mdTypeList) {
+				if (mdType.equals(code)) {
+					return true;
+				}
+			}
+		}
+
+		return false;
+	}
 
 }
